--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ tokio = { version = "1.32.0", features = ["full"] }
 serde = "1.0.188"
 serde_json = "1.0.107"
 sysinfo = "0.30.0"
+chrono = "0.4.31"
